Library/AXL(Library)/Visual Basic(Net)/AXM.vb


' Start to detect origin.
' When origin detecting start API is executed, thread which will detect origin of relevant axis in the library is created automatically and it is automatically closed after carrying out of the origin detecting in sequence.
Public Declare Function AxmHomeSetStart Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer
' User sets the result of origin detecting optionally.
' When the detecting of origin is completed successfully by using origin detecting API, the result of detecting is set as HOME_SUCCESS.
' This API enables user to set result optionally without execution of origin detecting.
' uHomeResult Setup
' HOME_SUCCESS           = 0x01,
' HOME_SEARCHING         = 0x02,
' HOME_ERR_GNT_RANGE     = 0x10, // Gantry Home Range Over
' HOME_ERR_USER_BREAK    = 0x11, // User Stop Command
' HOME_ERR_VELOCITY      = 0x12, // Velocity is very slow and fast
' HOME_ERR_AMP_FAULT     = 0x13, // Servo Drive Alarm
' HOME_ERR_NEG_LIMIT     = 0x14, // (+)Limit sensor check (-)dir during Motion
' HOME_ERR_POS_LIMIT     = 0x15, // (-)Limit sensor check (+)dir during Motion
' HOME_ERR_NOT_DETECT    = 0x16, // not detect User set signal
' HOME_ERR_UNKNOWN       = 0xFF,
Public Declare Function AxmHomeSetResult Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uHomeResult As Integer) As Integer
' Return the result of origin detecting.
' Verify detecting result of origin detection API. When detecting of origin is started, it sets as HOME_SEARCHING, and if the detecting of origin is failed the reason of failure is set. Redo origin detecting after eliminating of failure reasons.
Public Declare Function AxmHomeGetResult Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upHomeResult As Integer) As Integer



' Return progress rate of origin detection.
' Progress rate can be verified when origin detection is commenced. When origin detection is completed, return 100% whether success or failure. The success or failure of origin detection result can be verified by using GetHome Result API.
' upHomeMainStepNumber : Progress rate of Main Step .
' In case of gentry FALSE upHomeMainStepNumber : When 0 , only selected axis is in proceeding, home progress rate is indicated upHomeStepNumber.
' In case of gentry TRUE upHomeMainStepNumber : When 0, master home is in proceeding, master home progress rate is indicated upHomeStepNumber.
' In case of gentry TRUE upHomeMainStepNumber : When 10 , slave home is in proceeding, master home progress rate is indicated upHomeStepNumber .
' upHomeStepNumber     : Indicate progress rate against to selected axis.
' In case of gentry FALSE  : Indicate progress rate against to selected axis only.
' In case of gentry TRUE, progress rate is indicated by sequence of master axis and slave axis.
Public Declare Function AxmHomeGetRate Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upHomeMainStepNumber As Integer, ByRef upHomeStepNumber As Integer) As Integer




'======= Position move API =================================================================================

' If you want to set specified velocity unit in RPM(Revolution Per Minute),
' ex>    calculate rpm :
' 4500 rpm ?
' When unit/ pulse = 1 : 1, then it becomes pulse per sec, and
' if you want to set at 4500 rpm , then  4500 / 60 sec : 75 revolution / 1sec
' The number of pulse per 1 revolution of motor shall be known. This can be know by detecting of Z phase in Encoder.
' If 1 revolution:1800 pulse,  75 x 1800 = 135000 pulses are required.
' Operate by input Unit = 1, Pulse = 1800 into AxmMotSetMoveUnitPerPulse.

' Travel up to set distance or position.
' It moves by set velocity and acceleration up to the position set by absolute coordinates/ relative coordinates of specific axis.
' Velocity profile is set in AxmMotSetProfileMode API.
' It separates from API at the timing of pulse output start.
Public Declare Function AxmMoveStartPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer


' Travel up to set distance or position.
' It moves by set velocity and acceleration up to the position set by absolute coordinates/ relative coordinates of specific axis.
' Velocity profile is set in AxmMotSetProfileMode API
' It separates from API at the timing of pulse output finish.
Public Declare Function AxmMovePos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer


' Move by set velocity.
' It maintain velocity mode move by velocity and acceleration  set against to specific axis.
' It separates from API at the timing of pulse output start.
' It moves toward to CW direction when Vel value is positive, CCW when negative.
Public Declare Function AxmMoveVel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer


' It maintain velocity mode move by velocity and acceleration  set against to specific multi-axis.
' It separates from API at the timing of pulse output start.
' It moves toward to CW direction when Vel value is positive, CCW when negative.
Public Declare Function AxmMoveStartMultiVel Lib "AXL.dll" (ByVal lArraySize As Integer, ByRef lpAxesNo As Integer, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double) As Integer

' Driving set velocity and acceleration rate of specified multi axis.
' Driving speed mode consistently according to SyncMode.
' It separates from API at the timing of pulse output start.
' It moves toward to CW direction when Vel value is positive, CCW when negative.
' dwSyncMode : Disable synchronous stop function(0), Only use syncronous stop function(1), Use Synchronous stop function for alarm(2)
Public Declare Function AxmMoveStartMultiVelEx Lib "AXL.dll" (ByVal lArraySize As Integer, ByRef lpAxesNo As Integer, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double, ByVal uSyncMode As Integer) As Integer


' Driving in continuous speed mode with set speed and acceleration rate about specified multi axis.
' It separates from API at the timing of pulse output finish. The master axis moves at dVel speed, move at distance ratio of remaining axes.
' Only velocity of lowest axis number is read among corresponding chip.
Public Declare Function AxmMoveStartLineVel Lib "AXL.dll" (ByVal lArraySize As Integer, ByRef lpAxesNo As Integer, ByRef dpDis As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer


' API which detects Edge of specific Input signal and makes emergency stop or slowdown stop.
' lDetect Signal : Select input signal to detect .
' lDetectSignal  : PosEndLimit(0), NegEndLimit(1), HomeSensor(4), EncodZPhase(5), UniInput02(6), UniInput03(7)
' Signal Edge    : Select edge direction of selected input signal (rising or falling edge).
'                  SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
' Move direction : CW when Vel value is positive, CCW when negative.
' SignalMethod   : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' Caution: When SignalMethod is used as EMERGENCY_STOP(0), acceleration/deceleration is ignored and it is accelerated to specific velocity and emergency stop.
'          lDetectSignal is PosEndLimit , in case of searching NegEndLimit(0,1) active status of signal level is detected.
Public Declare Function AxmMoveSignalSearch Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal lDetectSignal As Integer, ByVal lSignalEdge As Integer, ByVal lSignalMethod As Integer) As Integer


' API which detects Edge of specific Input signal and makes move by user-specified value.(MLIII : Sigma-5/7 only)
' dVel           : It moves toward to CW direction when Vel value is positive, CCW when negative.
' dAccel         : Acceleration value
' dDecel         : Deceleration value(Generally, set for 50 times of dAccel value)
' lDetectSignal  : HomeSensor(4)
' dDis           : It is driven relative to the user-specified position based on the detection position of the input signal.
' Notice :
'         - It can be driven in reverse direction when input dDis value in direction opposite to driving direction.
'         - If velocity is fast and dDis value is small, It can be driven in reverse to go to final position when after motor has detect signal and stop.
'         - Home sensor must be set 'LOW' or 'HIGH' before use this API.
Public Declare Function AxmMoveSignalSearchAtDis Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lDetectSignal As Integer, ByVal dDis As Double) As Integer


' API which detects signal set in specific axis and travels in order to save the position.
' In case of searching acting API to select and find desired signal, save the position and read the value using AxmGetCapturePos.
' Signal Edge   : Select edge direction of selected input signal. (rising or falling edge).
'                 SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
' Move direction: CW when Vel value is positive, CCW when negative.
' SignalMethod  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' lDetect Signal: Select input signal to detect edge .SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
' lDetectSignal : PosEndLimit(0), NegEndLimit(1), HomeSensor(4), EncodZPhase(5), UniInput02(6), UniInput03(7)
' lTarget       : COMMAND(0), ACTUAL(1)
' Caution: When SignalMethod is used as EMERGENCY_STOP(0), acceleration/deceleration is ignored and it is accelerated to specific velocity and emergency stop.
' lDetectSignal is PosEndLimit , in case of searching NegEndLimit(0,1) active status of signal level is detected.
Public Declare Function AxmMoveSignalCapture Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal lDetectSignal As Integer, ByVal lSignalEdge As Integer, ByVal lTarget As Integer, ByVal lSignalMethod As Integer) As Integer

' API which verifies saved position value in 'AxmMoveSignalCapture' API.
Public Declare Function AxmMoveGetCapturePos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpCapPotition As Double) As Integer


' " API which travels up to set distance or position.
' When execute API, it starts relevant motion action and escapes from API without waiting until motion is completed ”
Public Declare Function AxmMoveStartMultiPos Lib "AXL.dll" (ByVal lArraySize As Integer, ByRef lpAxisNo As Integer, ByRef dpPos As Double, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double, ByVal uStopMode As Integer) As Integer


' Travels up to the distance which sets multi-axis or position.
' It moves by set velocity and acceleration up to the position set by absolute coordinates of specific axis. specific axes.
Public Declare Function AxmMoveMultiPos Lib "AXL.dll" (ByVal lArraySize As Integer, ByRef lpAxisNo As Integer, ByRef dpPos As Double, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double, ByVal uStopMode As Integer) As Integer



' When execute API, it starts open-loop torque motion action of specific axis.(only for MLII, Sigma 5 servo drivers)
' dTroque        : Percentage value(%) of maximum torque. (negative value : CCW, positive value : CW)
' dVel           : Percentage value(%) of maximum velocity.
' dwAccFilterSel : LINEAR_ACCDCEL(0), EXPO_ACCELDCEL(1), SCURVE_ACCELDECEL(2)
' dwGainSel      : GAIN_1ST(0), GAIN_2ND(1)
' dwSpdLoopSel   : PI_LOOP(0), P_LOOP(1)
Public Declare Function AxmMoveStartTorque Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dTorque As Double, ByVal dVel As Double, ByVal nAccFilterSel As Integer, ByVal nGainSel As Integer, ByVal nSpdLoopSel As Integer) As Integer


' It stops motion during torque motion action.
' it can be only applied for AxmMoveStartTorque API.
Public Declare Function AxmMoveTorqueStop Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal nMethod As Integer) As Integer


